name: haskell-jit
version: 0.1.0.0
license: GPL-2
license-file: LICENSE
build-type: Simple
cabal-version: >=1.8

executable calc
  build-depends:  base ==4.6.*,
                  array ==0.4.*,
                  bytestring ==0.10.*,
                  binary ==0.5.*
  other-modules:  Lexer, Parser, Interpreter, Jit
  build-tools:    alex, happy
  main-is:        Main.hs
