name: haskell-jit
version: 0.1.0.0
license: GPL-2
license-file: LICENSE
build-type: Simple
cabal-version: >=1.8

executable calc
  build-depends:  base,
                  array,
                  bytestring
  c-sources:      mmap-x86_64.c
  cc-options:     -g
  other-modules:  Lexer, Parser, Interpreter, Jit
  build-tools:    alex, happy
  main-is:        Main.hs
